mobile resizing updated

--- a/Nuno Theme Starter Files/index.html
+++ b/Nuno Theme Starter Files/index.html
@@ -33,7 +33,7 @@
                     <a class="nav-link" href="#features">Features</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#resourses">Resources</a>
+                    <a class="nav-link" href="#resources">Resources</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#clients">Clients</a>
@@ -70,7 +70,7 @@
 
 
 <!-- Star Course Secction-->
-<div id="Course" class="offset">
+<div id="course" class="offset">
    
    <div class="col-12 narrow text-center">
        <h1>Nuno Theme Advance Bootstrap Course</h1>
